# ide-plugin-clion

./: CHANGELOG.md  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/template-cleanup/: gradle.properties
.github/workflows/: build.yml  release.yml
.run/: Run IDE with Plugin.run.xml
gradle/: libs.versions.toml
src/main/cpp/: CMakeLists.txt  README.md
src/main/cpp/src/: AUIPreviewToolWindow.cpp  AUIPreviewToolWindow.h  AUIPreviewUIToolWindow.cpp  AUIPreviewUIToolWindow.h  AUIViewContainer.cpp  AUIViewContainer.h  JniHelper.hpp  main.cpp
src/main/cpp/src/cjg/: cjg.hpp  converter.hpp  ref.hpp  storage.hpp
src/main/kotlin/com/github/alex2772/auiclionplugin/: MyBundle.kt
src/main/kotlin/com/github/alex2772/auiclionplugin/listeners/: MyApplicationActivationListener.kt  MyProjectManagerListener.kt
src/main/kotlin/com/github/alex2772/auiclionplugin/services/: MyApplicationService.kt  MyProjectService.kt
src/main/kotlin/com/github/alex2772/auiclionplugin/toolWindow/: MyToolWindowFactory.kt
src/main/kotlin/com/github/aui/clion/: AUIIcons.kt  ConfigurationData.kt  MyBundle.kt
src/main/kotlin/com/github/aui/clion/aui/: AUIViewContainer.kt
src/main/kotlin/com/github/aui/clion/fileTemplates/: AUIMultipleFileTemplate.kt  AUIStylesheet.kt  AUITestSuiteTemplate.kt  AUIWindowTemplate.kt
src/main/kotlin/com/github/aui/clion/fileType/: AUIStylesheetFileType.kt
src/main/kotlin/com/github/aui/clion/fileTypeOverrider/: AUIStylesheetFileTypeOverrider.kt
src/main/kotlin/com/github/aui/clion/gutter/: AUIAssetGutter.kt  (+1 more)
src/main/kotlin/com/github/aui/ideplugin/: AUIBundle.kt  AUIIcons.kt  ConfigurationData.kt  MyBundle.kt
src/main/resources/fileTemplates/internal/: AUI Global Stylesheet.ass.cpp.ft  AUI Global Stylesheet.ass.cpp.html  AUI Stylesheet.ass.cpp.ft  AUI Stylesheet.ass.cpp.html  AUI Test Suite.cpp.ft  AUI Test Suite.html  AUI Window CPP.cpp.ft  AUI Window CPP.cpp.html  AUI Window Header.h.ft  AUI Window Header.h.html
src/main/resources/inspectionDescriptions/: AUIAssetExistence.html  AUIColorLiteral.html
src/main/resources/messages/: AUIBundle.properties  aui.properties
src/test/kotlin/com/github/alex2772/auiclionplugin/: MyPluginTest.kt
src/test/kotlin/com/github/aui/clion/: MyPluginTest.kt
src/test/testData/layout/: Layout1.cpp
(+61 files in other folders)
